--- a/others.html
+++ b/others.html
@@ -11,7 +11,7 @@
         
         <div class="heading"> <!--Top Logo and text-->
           <nav id="dark">
-            <a href="darkothers.html"><i class="fa-solid fa-moon" style="color: #001657;"></i>Dark</a>
+            <a href="darkothers"><i class="fa-solid fa-moon" style="color: #001657;"></i>Dark</a>
           </nav>
             <img id="MSTLogo" src="MSTLogo.png" width="150"><h1 id="MST">MST Say</h1>
         </div>
