--- a/others.html
+++ b/others.html
@@ -17,9 +17,9 @@
         </div>
 
         <nav class="menu"> <!-- Top menu bars-->
-            <a id="students" href="index.html"><strong>Students' snaps</strong></a>
-            <a href="teachers.html"><strong>Teachers' snaps</strong></a>
-            <a id="others" href="others.html"><strong>Others</strong></a>
+            <a id="students" href="index"><strong>Students' snaps</strong></a>
+            <a href="teachers"><strong>Teachers' snaps</strong></a>
+            <a id="others" href="others"><strong>Others</strong></a>
         </nav>
 
         <div class="mid"> <!--22.10.2023 10:57-->
