--- a/others.html
+++ b/others.html
@@ -11,15 +11,15 @@
         
         <div class="heading"> <!--Top Logo and text-->
           <nav id="dark">
-            <a href="darkothers"><i class="fa-solid fa-moon" style="color: #001657;"></i>Dark</a>
+            <a href="./darkothers"><i class="fa-solid fa-moon" style="color: #001657;"></i>Dark</a>
           </nav>
             <img id="MSTLogo" src="MSTLogo.png" width="150"><h1 id="MST">MST Say</h1>
         </div>
 
         <nav class="menu"> <!-- Top menu bars-->
-            <a id="students" href="index"><strong>Students' snaps</strong></a>
-            <a href="teachers"><strong>Teachers' snaps</strong></a>
-            <a id="others" href="others"><strong>Others</strong></a>
+            <a id="./students" href="index"><strong>Students' snaps</strong></a>
+            <a href="./teachers"><strong>Teachers' snaps</strong></a>
+            <a id="./others" href="others"><strong>Others</strong></a>
         </nav>
 
         <div class="mid"> <!--22.10.2023 10:57-->
