--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
     </head>
     <body>
         <div class="heading"> <!--Top Logo and text-->
-            <img id="MSTLogo" src="MSTLogo.png" width="150"><h1 id="MST">MST Say</h1>
-        </div>
-
+          <img id="MSTLogo" src="MSTLogo.png"><h1 id="MST">MST</h1><p id="heading">Snap Collection</p>
         <nav class="menu"> <!-- Top menu bars-->
           <a id="students" href="index.html"><strong>Students' snaps</strong></a>
           <a href="teachers.html"><strong>Teachers' snaps</strong></a>
+          <a id="news" href="news.html"><strong>MST News</strong></a>
           <a id="others" href="others.html"><strong>Others</strong></a>
         </nav>
+
+      </div>
 
         <div class="mid"> <!--22.10.2023 10:57-->
             <div>
