--- a/others.html
+++ b/others.html
@@ -10,16 +10,14 @@
     <body>
         
         <div class="heading"> <!--Top Logo and text-->
-          <nav id="dark">
-            <a href="./darkothers"><i class="fa-solid fa-moon" style="color: #001657;"></i>Dark</a>
-          </nav>
-            <img id="MSTLogo" src="MSTLogo.png" width="150"><h1 id="MST">MST Say</h1>
+          <img id="MSTLogo" src="MSTLogo.png"><h1 id="MST">MST</h1><p id="heading">Snap Collection</p>
         </div>
 
         <nav class="menu"> <!-- Top menu bars-->
-            <a id="./students" href="index"><strong>Students' snaps</strong></a>
-            <a href="./teachers"><strong>Teachers' snaps</strong></a>
-            <a id="./others" href="others"><strong>Others</strong></a>
+            <a id="students" href="index.html"><strong>Students' snaps</strong></a>
+            <a href="teachers.html"><strong>Teachers' snaps</strong></a>
+            <a id="news" href="news.html"><strong>MST News</strong></a>
+            <a id="others" href="others.html"><strong>Others</strong></a>
         </nav>
 
         <div class="mid"> <!--22.10.2023 10:57-->
