--- a/teachers.html
+++ b/teachers.html
@@ -8,12 +8,13 @@
     </head>
     <body>
         <div class="heading"> <!--Top Logo and text-->
-            <img id="MSTLogo" src="MSTLogo.png" width="150"><h1 id="MST">MST Say</h1>
+            <img id="MSTLogo" src="MSTLogo.png"><h1 id="MST">MST</h1><p id="heading">Snap Collection</p>
         </div>
 
         <nav class="menu"> <!-- Top menu bars-->
           <a id="students" href="index.html"><strong>Students' snaps</strong></a>
           <a id="Tr" href="teachers.html"><strong>Teachers' snaps</strong></a>
+          <a id="news" href="news.html"><strong>MST News</strong></a>
           <a id="others" href="others.html"><strong>Others</strong></a>
         </nav>
 
