--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <body>
         <div class="heading"> <!--Top Logo and text-->
           <img id="MSTLogo" src="MSTLogo.png"><h1 id="MST">MST</h1><p id="heading">Snap Collection</p>
+        </div>
         <nav class="menu"> <!-- Top menu bars-->
           <a id="students" href="index.html"><strong>Students' snaps</strong></a>
           <a href="teachers.html"><strong>Teachers' snaps</strong></a>
