--- a/teachers.html
+++ b/teachers.html
@@ -13,7 +13,7 @@
         <nav class="menu"> <!-- Top menu bars-->
           <a id="students" href="index.html"><strong>Students' snaps</strong></a>
           <a id="Tr" href="teachers.html"><strong>Teachers' snaps</strong></a>
-          <a id="news" href="news.html"><strong>MST News</strong></a>
+          <a id="news" href="test.html"><strong>MST News</strong></a>
           <a id="others" href="others.html"><strong>Others</strong></a>
         </nav>
 
